Replacing template.yml with template.example.yml

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ build.toml
 buildspec.yml
 samconfig.toml
 
+# Template with owner's settings
+template.yml
 #-------------------------------------------------------------------------------
 # FRONTEND SPECIFIC IGNORES
 #-------------------------------------------------------------------------------
